# wynnbanner

./: Cargo.toml  Dockerfile
src/: banner_gen.rs  main.rs
