[package]
name = "wynnbanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
actix = "0.13.3"
actix-rt = "2.9.0"
mcbanner = "0.1.1"
rand = "0.8.5"
serde = {version = "1.0.197", features = ["derive"]}
